<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_vvsmall"
    android:background="@drawable/number_picker_dialog"
    android:padding="@dimen/padding_small_medium"
    android:theme="@style/AppTheme"
    android:transitionName="timer_name_popup_transition">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextTimerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_large"
        android:layout_marginRight="@dimen/padding_large"
        android:layout_marginBottom="@dimen/padding_huge"
        android:background="@drawable/edit_text"
        android:elevation="6dp"
        android:hint="@string/timer_text_placeholder"
        android:inputType="textCapSentences"
        android:maxLength="20"
        android:minWidth="250dp"
        android:minHeight="54dp"
        android:paddingLeft="@dimen/padding_small"
        android:paddingTop="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:stateListAnimator="@null"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/iconTint"
        android:textColorHint="@color/textTransparent55"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setTimerNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/padding_small"
        android:layout_marginBottom="@dimen/padding_small"
        android:background="@drawable/popup_buttons"
        android:elevation="8dp"
        android:padding="@dimen/padding_small"
        android:stateListAnimator="@null"
        android:text="@string/set"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/iconTint"
        android:theme="@style/AppTheme"
        app:backgroundTint="@color/iconTintDark"
        app:cornerRadius="@dimen/padding_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelSetTimerNameButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextTimerName"
        app:rippleColor="@color/iconTint" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelSetTimerNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_marginEnd="@dimen/padding_small"
        android:layout_marginBottom="@dimen/padding_small"
        android:background="@drawable/popup_buttons"
        android:elevation="8dp"
        android:padding="@dimen/padding_small"
        android:stateListAnimator="@null"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/iconTint"
        android:theme="@style/AppTheme"
        app:backgroundTint="@color/iconTintDark"
        app:cornerRadius="@dimen/padding_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/setTimerNameButton"
        app:layout_constraintTop_toBottomOf="@id/editTextTimerName"
        app:rippleColor="@color/iconTint" />
</androidx.constraintlayout.widget.ConstraintLayout>